# Visual-Odometry

./: CMakeLists.txt  README.md  operation.txt
config/: euroc_config.yaml
include/: LoadData.h  System.h  basicStructure.h
include/imageProcess/: ImageProcessor.h  Matcher.h  OrbExtractor.h  Rectifier.h
include/timer/: tictoc.h
include/track/: Frame.h  Track.h  optimizor.h
result/: computePose_camNorm.txt  depth_id.txt  depth_id.txt~  depth_id_remove.txt  depth_id_remove.txt~  lastKps_after.txt  lastKps_after.txt~  lastKps_remove.txt  lastKps_remove.txt~
src/: CMakeLists.txt  LoadData.cpp  System.cpp  main.cpp  stereovo.json
src/imagePorcess/: ImageProcessor.cpp  Matcher.cpp  OrbExtractor.cpp  Rectifier.cpp
src/track/: Frame.cpp  Track.cpp  optimizor.cpp
